2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.h
	* userprefs.c (prefs_init)
	* main.c: Remove call to the deprecated gconf_init,
	and change the prefs_init signature.

2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.c (prefs_load): Initialize GError before using it (fix
	bug #327614).  Plus, clean up the code.

2005-12-06  Vincent Noel  <noel@localhost.localdomain>

	* logview.schemas.in: Fix some key descriptions. Fix bug #323141.

2005-12-02  Vincent Noel  <vincent.noel@gmail.com>

	* gnome-system-log.desktop.in: Add the Monitor category to
	.desktop file. Patch by Matthias Clasen. Fixes bug #322132.

2005-11-28  Guilherme de S. Pastore  <gpastore@gnome.org>

	* about.c (logview_about): fixed a typo in the author credits.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_add_lines), (log_read_new_lines): Apparently you
	  can't compare a GnomeVFSFileSize with a GnomeVFSFileOffset.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_stats_reload), (log_read_new_lines): Update the
	line count and last modification date when a log is updated.

2005-11-18  Vincent Noel  <vincent.noel@gmail.com>

	* calendar.c: (calendar_mark_dates), (log_find_day):
	* calendar.h:
	* log_repaint.c: (log_add_new_log_lines),
	(log_fill_model_with_date), (logview_set_log_model):
	* logrtns.c: (log_read_dates), (log_close):
	* logrtns.h:
	* logview.c: (logview_count_logs), (logview_save_prefs),
	(logview_add_log), (logview_find_log_from_name),
	(logview_close_log), (logview_file_selected_cb):
	* logview.h:
	* main.c: (save_session):
	* misc.c: (error_dialog_show), (error_dialog_show_queued): Convert
	a few double-linked lists in linked lists.

2005-11-18  Vincent Noel  <vincent.noel@gmail.com>

	* logview.c: (logview_set_window_title), (window_size_changed_cb),
	(logview_window_finalize), (logview_init), (logview_window_new):
	* main.c: (main):