@@ -20,9 +20,12 @@
 <!-- please do not change the id; for translations, change lang to -->
 <!-- appropriate code -->
   <articleinfo> 
-    <title>&app; Manual V&manrevision;</title>
+    <title>&app; Manual</title>
 
-    <abstract role="description"><para>System Log Viewer</para></abstract>
+    <abstract role="description">
+      <para>System Log Viewer is a graphical, menu-driven viewer that you can
+      use to view and monitor your system log files.</para>
+    </abstract>
 
     <copyright> 
       <year>2003</year> 
