@@ -1,3 +1,8 @@
+2006-01-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* help/C/gnome-system-log.xml: fix the manual's title and abstract
+	for a better classification under Scrollkeeper (closes bug #327793).
+
 2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* userprefs.h
